# TS_RS

./: .gitignore  AGENTS.md  README.md  TS_RS_strict_external_review_for_developers_20260617.md  todo.csv
app/: CMakeLists.txt
app/src/app/: main.cpp
app/src/application/commands/: DetailPackageCommandService.cpp  DetailPackageCommandService.h  RebarCreationCommandService.cpp  RebarCreationCommandService.h  RebarCreationPorts.h  SelectionCommandService.cpp  SelectionCommandService.h  StepImportCommandService.cpp  StepImportCommandService.h
app/src/application/import/: ImportedModelStore.cpp  ImportedModelStore.h
app/src/application/rebarsmart/: RebarCreationCommandServiceFactory.cpp  RebarCreationCommandServiceFactory.h  RebarSmartFixDistanceCenterlineGeneratorAdapter.cpp  RebarSmartFixDistanceCenterlineGeneratorAdapter.h
app/src/core/: AppBuildInfo.cpp  AppBuildInfo.h
app/src/domain/rebar/: RebarModel.cpp  RebarModel.h
app/src/drawing/detail/: DetailPackageReader.cpp  DetailPackageReader.h  DetailPackageWriter.cpp  DetailPackageWriter.h
app/src/drawing/schedule/: ScheduleModel.cpp  ScheduleModel.h
app/src/geometry/kernel/: IGeometryEngine.h
app/src/geometry/occt/: OcctGeometryEngine.cpp  OcctGeometryEngine.h
app/src/presentation/occ/: OccViewerWidget.cpp  OccViewerWidget.h  StepDisplayModel.h
app/src/presentation/style/: StepModelDisplayStyle.cpp  StepModelDisplayStyle.h
app/src/project/tsrebar/: TsrebarProjectFile.cpp  TsrebarProjectFile.h
app/src/rebarsmart/distribute/: DistributionTypes.h  PriorityCountDistributor.cpp  PriorityCountDistributor.h  PriorityListDistributor.cpp  PriorityListDistributor.h  PrioritySpaceDistributor.cpp  PrioritySpaceDistributor.h
app/src/rebarsmart/generators/: FixDistanceGenerator.cpp  FixDistanceGenerator.h  FixNumberGenerator.cpp  FixNumberGenerator.h
app/src/rebarsmart/space_list/: SpaceListParser.cpp  SpaceListParser.h
app/src/rebarsmart/zone/: GuideCurveZoneCalculator.cpp  GuideCurveZoneCalculator.h  GuideSurfaceOffsetCalculator.cpp  GuideSurfaceOffsetCalculator.h
app/src/step/: ShapeStore.cpp  ShapeStore.h  StepImportService.cpp  StepImportService.h  StepUnitPolicy.cpp  StepUnitPolicy.h  TopologyBindingRegistry.cpp  TopologyBindingRegistry.h
app/src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
app/tests/: CMakeLists.txt  smoke_tests.cpp
app/tests/application/: command_service_boundary_scan_tests.cpp  command_service_guardrails_tests.cpp  rebar_creation_command_service_tests.cpp  step_import_command_service_tests.cpp  step_import_local_sample_probe_tests.cpp
app/tests/domain/: rebar_model_transaction_tests.cpp
app/tests/drawing/: detail_package_reader_tests.cpp  detail_package_writer_tests.cpp  schedule_model_tests.cpp
app/tests/geometry/: geometry_engine_contract_tests.cpp  occt_geometry_engine_tests.cpp
app/tests/presentation/: occ_viewer_selection_tests.cpp  step_model_display_style_tests.cpp
app/tests/project/: tsrebar_project_file_tests.cpp
app/tests/rebarsmart/: fix_distance_generator_tests.cpp  fix_number_generator_tests.cpp  guide_curve_zone_calculator_tests.cpp  guide_surface_offset_calculator_tests.cpp  priority_count_distributor_tests.cpp  priority_list_distributor_tests.cpp  priority_space_distributor_tests.cpp  space_list_parser_tests.cpp
app/tests/step/: step_import_service_tests.cpp  topology_binding_registry_tests.cpp
app/tests/ui/: app_startup_smoke_tests.cpp  main_window_skeleton_tests.cpp
docs/adr/: ADR-0001_STEP_only_RebarSmart_Detail路线.md
docs/architecture/: 00_系统架构总览.md  01_纯算法层实现计划.md  02_TODO-006_app工程骨架实现记录.md  03_旧实现项目QtOCCT可复用审计.md  04_TODO-007_SpaceListParser实现记录.md  05_TODO-008_PriorityDistributors实现记录.md  06_TODO-009_PriorityListDistributor实现记录.md  07_TODO-010_ZoneCalculators实现记录.md  08_TODO-011_IGeometryEngine接口实现记录.md  09_TODO-012_OcctGeometryEngineP0实现记录.md  10_TODO-013_FixDistanceGeneratorP0实现记录.md  11_TODO-014_FixNumberGeneratorP0实现记录.md  12_TODO-015_Qt6_OCCT主窗口骨架实现记录.md  13_ApplicationService_CommandService_边界.md  14_TODO-020_STEP导入与水泥灰显示实现记录.md  15_TODO-020B_ShapeStore与TopologyBindingRegistry实现记录.md  16_TODO-022_DetailPackageReaderP0实现记录.md  17_TODO-023_DetailPackageWriter_roundtrip_scope.md  18_TODO-023_DetailPackageWriterRoundTrip实现记录.md  19_TODO-024_MinimalDetailPackage实现记录.md  20_TODO-020D_TopologyBindingRegistryP1实现记录.md  21_TODO-020E_StepSession_ImportedModelStore实现记录.md  22_TODO-020G_CommandServiceSkeletonGuardrails实现记录.md  23_TODO-021_ViewerSelectionSystem实现记录.md  24_TODO-020F_STEPImportUnitScalePolicy实现记录.md  25_TODO-025_RebarModelMinimalTransaction实现记录.md  26_TODO-026_TsrebarMinimalSaveOpen实现记录.md  27_TODO-027_ScheduleModelP0实现记录.md  28_TODO-028_RebarCreationCommandServiceP0实现记录.md
docs/detail/: 00_Detail包证据索引.md  01_DetailXML_observed_schema.md  02_Detail_roundtrip_policy.md  03_MinimalDetailPackage_v2_protocol.md
docs/external_reviews/: 20260617_TODO022_detail_reader_review.md  20260617_TODO024_xhigh_internal_review.md  20260617_after_TODO020B_conditional_go.md  20260618_TODO023_TODO024_web_gpt_pro_review.md  20260618_TODO024_web_gpt_pro_review_dropped.md  20260624_TODO020D_web_gpt_pro_review.md
docs/geometry/: 01_IGeometryEngine_P1扩展接口.md
docs/legal/: 00_reverse_engineering_and_resource_reuse_boundary.md
docs/rebarsmart/: 00_证据索引.md  01_GenerateRebarData字段地图.md  02_单位枚举默认值规则.md
docs/roadmap/: 00_路线图.md  01_长期Goal执行目标.md  02_外部技术评审核心修正.md  03_P0A最小闭环与前置验证门禁.md
docs/step/: 00_STEP_TopologyBinding_spike_plan.md
docs/ui/: 00_UI决策记录.md  01_顶层选项卡与功能矩阵.md  03_钢筋树右键菜单设计.md  04_参考面参考线UI设计.md  05_OCCT视图交互与选择设计.md  06_显示颜色与高亮规则.md  07_显示页签图石对齐矩阵.md  08_定距钢筋参数面板与IDA证据.md  09_钢筋页签命令与RebarSmart算法映射.md  10_钢筋创建Dock面板RebarSmart一致性规则.md  11_UI可开发规格.md  12_定数钢筋参数面板与证据.md  13_老图石Ribbon外壳对齐规格.md  14_老图石命令到RebarSmart生成器映射表.md  15_RibbonLite_P0实现规格.md  README.md
docs/validation/: 00_golden_case_strategy.md
docs/validation/fixtures/: detail_todo66_manifest.md
docs/validation/golden_cases/GC-001/: README.md
docs/validation/golden_cases/GC-002/: README.md
docs/validation/golden_cases/GC-004/: README.md  (+1 more)
(+2 files in other folders)
